# pibeli

./: .gitignore  README.md  mypy.ini  pyproject.toml
src/pybeli/models/: portfolio.py
src/pybeli/services/: graph_fetcher.py
tests/models/: test_portfolio.py
tests/services/: test_graph_fetcher.py
