[tool.poetry]
name = "pybeli"
version = "0.1.0"
description = "Technical analysis for stocks and crypto"
authors = []

[tool.poetry.dependencies]
python = ">=3.8,<4.0"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-cov = "*"
ruff = "*"
mypy = "*"
uv = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
